public/css/self-service-time-to-pay.css
.page-header h1 {
    font-size: 36px;
    margin-top: 15px;
}

.page-header h1.h1-heading {
    font-size: 48px;
}

.ssttp-grid-layout-payment-today {
    width: 39%;
}

.ssttp-plus-calc {
    line-height: 1.1;
    padding: 0.35em 0.65em 0.15em 0.65em;
}

.ssttp-minus-calc {
    line-height: 1.1;
    padding: 0.35em 0.75em 0.15em 0.75em;
}

.ssttp-spacing-calc {
    margin: 0px;
    padding-top: 10px;
    padding-bottom: 10px;
}

.ssttp-breakdown-calc {
    margin: 0px;
    padding-top: 0px;
    padding-bottom: 10px;
}

.ssttp-spinner-margin-calc {
    margin-left: -10px;
}

.ssttp-spinner-button-margin-calc {
    margin-right: 5px;
}



 /* GitHub Bug: Make <details> arrow work in Firefox */
  details summary {
    /*display: list-item !important;*/
 }
  .alterBottom {
      margin-bottom: 19px;
      padding-bottom: 19px;
  }
  .removeBottom{
      margin-bottom: 0px;
  }

.sortcode {
    margin:0;
    display: inline-block;
}

.container {
    float:left;
    white-space: nowrap;
}

.ssttp-spacing-instalment-summary {
    margin: 0px;
    padding-top: 10px;
    padding-bottom: 10px;
}
.clear{
    clear:both;
}

summary.ssttp-summary-app-complete{
    width: 200px;
}

fieldset.container{
    margin-bottom: 14.25px;
}
ul.container{
    margin: 0px;!important;
}

input.accountName{
    width:50%;
}
.ssttp-grid-layout-padding-above {
    margin-top: -10px;
}
.ssttp-margin-numericdateinput {
    margin-left: 0px !important;
}

.ssttp-grid-layout-padding-above-large {
    margin-top: -20px;
}

.govuk-grid-row {
    font-size: 16px;
    color: #fff;
    margin-bottom: 10px;
    display: flex;
}

.govuk-grid-column-full {
    background-color: #005ea5;
    box-sizing: border-box;
    width: 100%;
    padding: 0 15px;
}

@media (min-width: 40.0625em) {
    .govuk-grid-column-full {
        width: 100%;
        float: left;
    }
}

.gov-uk-body-title {
    font-weight: bold;
}
.gov-uk-body-link a{
    color: #fff;
}
.pull-right{
    float:right;
}
.banner-panel--hide{
    display: none;
}
.banner-panel{
    margin-bottom: 0;
}
.panel-tabular-data{
    padding-left: 1.4em;
}
.hug_left {
    float:left;
}

@media (min-width: 641px){
    .panel-tabular-data .tabular-data__heading {
        display: table-cell;
        width: 70%;
    }
    .panel-tabular-data .tabular-data__data-1 {
        display: table-cell;
        width: 30%;
    }
}
.normal-text{
    font-size: 19px;
}


#error-summary-display:focus{
    outline: 3px solid #ffbf47;
}

.margin-top-30 {
    margin-top: 30px !important;
}
.margin-top-40 {
    margin-top: 40px !important;
}
.margin-bottom-0 {
    margin-bottom: 0px !important;
}
.margin-bottom-20 {
    margin-bottom: 20px !important;
}
.margin-bottom-30 {
    margin-bottom: 30px !important;
}
.app-check-your-answers {
    font-family: "nta", Arial, sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    font-weight: 400;
    font-size: 16px;
    line-height: 1.25;
}
.printable {
    display: none;
}

@media print {

    .printable  {
        display: block;
    }
    #global-header,
    #content,
    #footer,
    .centered-content {
        display: none;
    }
}

@media (min-width: 40.0625em) {
    .app-check-your-answers {
        font-size: 19px;
        line-height: 1.31579;
    }
}


@media (min-width: 48.0625em) {
    .app-check-your-answers {
        display: table;
    }
}

@media (min-width: 48.0625em) {
    .app-check-your-answers--short {
        width: 100%;
    }
    .app-check-your-answers--short .app-check-your-answers__question {
        width: 30%;
    }
}

@media (min-width: 48.0625em) {
    .app-check-your-answers--long {
        width: 100%;
    }
    .app-check-your-answers--long .app-check-your-answers__question {
        width: 50%;
    }
}

.app-check-your-answers__contents {
    position: relative;
    border-bottom: 1px solid #bfc1c3;
}
.add_bottom_line{
    border-bottom: 1px solid #bfc1c3 !important;
}

.no_bottom_line{
    border-bottom: 0 !important;
}

@media (min-width: 48.0625em) {
    .app-check-your-answers__contents {
        display: table-row;
    }
}

@media (min-width: 48.0625em) {
    .app-check-your-answers__contents:first-child .app-check-your-answers__question,
    .app-check-your-answers__contents:first-child .app-check-your-answers__answer,
    .app-check-your-answers__contents:first-child .app-check-your-answers__change {
        padding-top: 0;
    }
}

.app-check-your-answers__question,
.app-check-your-answers__answer,
.app-check-your-answers__change {
    display: block;
    margin: 0;
}

@media (min-width: 48.0625em) {
    .app-check-your-answers__question,
    .app-check-your-answers__answer,
    .app-check-your-answers__change {
        display: table-cell;
        border-bottom: 1px solid #bfc1c3;
        padding: 0.63158em 1.05263em 0.47368em 0;
    }
}

.app-check-your-answers__question {
    font-weight: bold;
    margin: 0.63158em 4em 0.21053em 0;
}
.app-check-your-answers__question span.small{
    font-weight: normal;
}

.app-check-your-answers__answer {
    padding-bottom: 0.47368em;
}

.align-left{
    text-align: left;
}

.app-check-your-answers__change {
  /*  text-align: right;
    position: absolute;*/
    top: 0;
    right: 0;
}

@media (min-width: 48.0625em) {
    .app-check-your-answers__change {
        position: static;
        padding-right: 0;
    }
}
.small{
    font-size: 16px;
    line-height: 1.25;
    margin-bottom: 0;
}
.number-toggle .form-control{
    width: 100%
}
.number-toggle-left,
.number-toggle-input,
.number-toggle-right{
    float:left;
}

.number-toggle-input{
        width:3em;
}
.number-toggle-left .button{
    margin-right: 4px;
    height: 1.9em;
}
.number-toggle-right .button{
    margin-left: 4px;
    height: 1.9em;
}
@media (min-width: 48.0625em){
    #id_summary .app-check-your-answers--long .app-check-your-answers__question {
        width: 70%;
    }
    .summary_payment .app-check-your-answers--long .app-check-your-answers__question {
        width: 50%;
    }
}

.flash.error-summary {
    border: 5px solid #b10e1e;
    margin-top: 30px;
    margin-bottom: 30px;
    padding: 20px 15px 15px;
}
.flash.error-summary a{
    font-weight: bold;
}
#error-summary-heading{
    font-size: 24px;
}
.form-field-group--error .error-notification,
.form-field--error .error-notification{
    font-weight: bold;
    font-size: 19px;
    line-height: 1.31579;
}

.form-field--error {
    border-left: 5px solid #b10e1e;
    padding-left: 15px;
    margin-right: 15px;
}
.form-field--error input[type="text"]{
    border: 4px solid #b10e1e;
}
.form-field--error legend h1{
    margin-top: 0!important
}
.form-field-group--error,
.error{
    border-left:  5px solid #b10e1e;
}


.button{
  padding-top: 9px;
  padding-bottom: 6px;
}

h1,h1.heading-large{
  margin-top:0px;
  font-size:32px;
  margin-bottom:30px;
}

.heading-medium{
  font-size:24px;
  margin-top:0;
  margin-bottom:20px;
}


@media (max-width: 641px){
  #amount.form-control-1-4{
    width:96%;
  }

  .form-field--error #amount.form-control-1-4{
    width:95%;
  }
}

a.link-back{
  top: -45px;
  margin-bottom: 0px;
  margin-top:0px;
}


h1.govuk-panel__title {
    font-size: 36px;
}


.govuk-panel__body{
    font-weight: 400;
    font-size: 24px;
    line-height: 1.04167;
}


@media (min-width: 40.0625em) {
    font-size: 36px;
    line-height: 1.11111;
    font-weight: 400;
}

.govuk-panel__body strong {
    font-weight: bold;
}

.transaction-banner--complete {
    background-color: #00703c;
}

.multiple-choice [type=radio]+label::after {
    content: "";
    border: 9px solid;
    width: 0;
    height: 0;
    position: absolute;
    top: 10px;
    left: 10px;
    border-radius: 50%;
    zoom: 1;
    filter: alpha(opacity=0);
    opacity: 0;
}
.no_borderline{

    border-bottom: 0px solid #bfc1c3;
}

.panel-tabular-data {
    color: #0b0c0c;
}

input:focus,
textarea:focus,
select:focus,
#global-header input:focus {
    outline-color: #fd0;
}

a:focus,
.error-summary .error-summary-list a:focus,
details summary:focus {
    outline: 3px solid transparent;
    color: #0b0c0c;
    background-color: #fd0;
    -webkit-box-shadow: 0 -2px #fd0, 0 4px #0b0c0c;
    box-shadow: 0 -2px #fd0, 0 4px #0b0c0c;
    text-decoration: none;
}

.page-nav__link:focus,
.js-enabled .add-focus,
.modal-dialog__content:focus,
.button:focus,
details summary:focus,
.error-summary:focus,
.timeout-dialog:focus {
    outline-color: #ffdd00;
}

.multiple-choice [type=radio]:focus + label::before {
    -webkit-box-shadow: 0 0 0 4px #ffdd00;
    box-shadow: 0 0 0 4px #ffdd00;
}

.multiple-choice [type=checkbox]:focus + label::before {
    -webkit-box-shadow: 0 0 0 3px #ffdd00;
    box-shadow: 0 0 0 3px #ffdd00
}

.account-menu__link:focus,
.is-smaller .account-menu__link--home:focus,
.is-smaller .account-menu__link--menu:focus,
.is-smaller .account-menu__link--home.account-menu__link--active:focus,
.is-smaller .account-menu__link--menu.account-menu__link--active:focus {
    border-bottom-color: #ffdd00;
}
@media (min-width: 48.0625em) {
.no_bottom_margin{
    margin-bottom: 0;
    paddding-bottom: 0;
}
}


.no-details details summary .arrow-closed {
    display:none;
}

